Fix proxy frontend deploy

--- a/templates/configmaps/proxy-frontend.yaml
+++ b/templates/configmaps/proxy-frontend.yaml
@@ -77,7 +77,7 @@ data:
 
     location / {
 
-            proxy_pass http://onlyoffice-proxy:8092;
+            proxy_pass http://proxy:8092;
         }
     }
 {{- end }}
