--- a/values.yaml
+++ b/values.yaml
@@ -198,10 +198,6 @@ service:
     port:
       external: 8092
     type: ClusterIP
-  proxyFrontend:
-    existing: ""
-    annotations: {}
-    type: LoadBalancer
 
 ## App persistence parameters
 ##
@@ -623,7 +619,7 @@ proxy:
       # Must be the same as the `key` names in `proxy.extraConf.templates.configMap`
       # May contain multiple values
       fileName:
-        - 10.upstream.conf.template
+        - 10.example.conf.template
     confd:
       # proxy.extraConf.confd.configMap The name of the ConfigMap containing additional custom configuration files
       # These files will be map in the `/etc/nginx/conf.d/` directory of the container
@@ -632,7 +628,7 @@ proxy:
       # Must be the same as the `key` names in `proxy.extraConf.confd.configMap`
       # May contain multiple values
       fileName:
-        - gzip.conf
+        - example.conf
 
 # DocSpace common statefulset parameters
 # This block defines common parameters for all statefulsets only
@@ -2099,6 +2095,162 @@ studioNotify:
       memory: "2Gi"
       cpu: "2000m"
 
+# DocSpace Proxy Frontend StatefulSet parameters
+#
+proxyFrontend:
+  # proxyFrontend.enabled Enables Proxy Frontend installation
+  enabled: false
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # proxyFrontend.updateStrategy.type Proxy Frontend StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for Proxy Frontend Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Proxy Frontend Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Proxy Frontend Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes Proxy Frontend Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Proxy Frontend container image parameters
+  image:
+    # proxyFrontend.image.repository Proxy Frontend container image repository
+    repository: nginx
+    # proxyFrontend.image.tag Proxy Frontend container image tag
+    tag: latest
+    # proxyFrontend.image.pullPolicy Proxy Frontend container image pull policy
+    pullPolicy: IfNotPresent
+  # proxyFrontend.containerPorts.http Proxy Frontend container port
+  containerPorts:
+    http: 80
+    https: 443
+  # Probe used for the proxyFrontend container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `proxyFrontend.startupProbe.enabled=true`
+  startupProbe:
+    # proxyFrontend.startupProbe.enabled Enable startupProbe for Proxy Frontend container
+    enabled: false
+    httpGet:
+      # proxyFrontend.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /
+      # proxyFrontend.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 80
+    # proxyFrontend.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # proxyFrontend.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `proxyFrontend.readinessProbe.enabled=true`
+  readinessProbe:
+    # proxyFrontend.readinessProbe.enabled Enable readinessProbe for Proxy Frontend container
+    enabled: false
+    # proxyFrontend.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # proxyFrontend.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /
+      # proxyFrontend.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 80
+    # proxyFrontend.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # proxyFrontend.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # proxyFrontend.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `proxyFrontend.livenessProbe.enabled=true`
+  livenessProbe:
+    # proxyFrontend.livenessProbe.enabled Enable livenessProbe for Proxy Frontend container
+    enabled: false
+    # proxyFrontend.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # proxyFrontend.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /
+      # proxyFrontend.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 80
+    # proxyFrontend.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # proxyFrontend.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## proxyFrontend.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Proxy Frontend container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # proxyFrontend.resources.requests The requested resources for the Proxy Frontend container
+  # proxyFrontend.resources.limits The resources limits for the Proxy Frontend container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+  # Additional configuration files for Proxy Frontend
+  extraConf:
+    confd:
+      # proxyFrontend.extraConf.confd.configMap The name of the ConfigMap containing custom configuration files
+      # These files will be map in the `/etc/nginx/conf.d/` directory of the container
+      configMap: default-conf
+      # proxyFrontend.extraConf.confd.fileName The names of the configuration files containing custom configuration files
+      # Must be the same as the `key` names in `proxyFrontend.extraConf.confd.configMap`
+      # May contain multiple values
+      fileName:
+        - default.conf
+    customConfd:
+      # proxyFrontend.extraConf.confd.configMap The name of the ConfigMap containing additional custom configuration files
+      # These files will be map in the `/etc/nginx/conf.d/` directory of the container
+      configMap: ""
+      # proxyFrontend.extraConf.customConfd.fileName The names of the configuration files containing additional custom configuration files
+      # Must be the same as the `key` names in `proxyFrontend.extraConf.customConfd.configMap`
+      # May contain multiple values
+      fileName:
+        - example.conf
+  # proxyFrontend.hostname The hostname (domainname) by which the DocSpace will be available
+  hostname: ""
+  # Proxy Frontend TLS parameters
+  tls:
+    # proxyFrontend.tls.secretName The name of the TLS secret containing the certificate and its associated key
+    # If not set, the parameters below are ignored
+    secretName: tls
+    # proxyFrontend.tls.mountPath The path where the certificate and key will be mounted
+    mountPath: /etc/godaddy/live
+    # proxyFrontend.tls.crtName Name of the key containing the certificate
+    crtName: cert.crt
+    # proxyFrontend.tls.keyName Name of the key containing the key
+    keyName: generated-private-key.key
+  # Proxy Frontend service parameters
+  service:
+    # proxyFrontend.service.existing The name of an existing service for Proxy Frontend. If not set, a service named `proxy-frontend` will be created
+    # ref: https://github.com/ONLYOFFICE/Kubernetes-DocSpace/blob/master/templates/services/proxy-frontend.yaml
+    existing: ""
+    # proxyFrontend.service.annotations Map of annotations to add to the Proxy Frontend service
+    annotations: {}
+    # proxyFrontend.service.type Proxy Frontend service type
+    type: LoadBalancer
+
 ## App common statefulset parameters
 ## This block defines common parameters for all statefulsets only
 ##
@@ -2147,58 +2299,6 @@ upgrade:
           repository: mysql
           tag: latest
           pullPolicy: IfNotPresent
-
-## App Proxy Frontend parameters
-## This block defines parameters for the Proxy Frontend StatefulSet only
-##
-proxyFrontend:
-  enabled: false
-  image:
-    repository: nginx
-    tag: latest
-    pullPolicy: IfNotPresent
-  podSecurityContext:
-    enabled: false
-    runAsUser: 104
-    runAsGroup: 107
-  containerPorts:
-    http: 80
-    https: 443
-  startupProbe:
-    enabled: false
-    httpGet:
-      path: /
-      port: 80
-    failureThreshold: 30
-    periodSeconds: 10
-  readinessProbe:
-    enabled: false
-    failureThreshold: 2
-    httpGet:
-      path: /
-      port: 80
-    periodSeconds: 10
-    successThreshold: 1
-    timeoutSeconds: 3
-  livenessProbe:
-    enabled: false
-    failureThreshold: 5
-    httpGet:
-      path: /
-      port: 80
-    periodSeconds: 10
-    successThreshold: 1
-    timeoutSeconds: 3
-    initialDelaySeconds: 45
-  extraConf:
-    configMap: default-conf
-    filename: default.conf
-  hostname: ""
-  tls:
-    secretName: tls
-    mountPath: /etc/godaddy/live
-    crtName: cert.crt
-    keyName: generated-private-key.key
 
 ## Document server parameters
 ## This block defines parameters for the document server StatefulSet only
