--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -2,12 +2,16 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-all
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "1"
 data:
   ENV_EXTENSION: {{ .Values.connections.envExtension | quote }}
-  SERVICE_PORT: {{ .Values.containerPorts.app | quote }}
   DATABASE_MIGRATION: {{ .Values.connections.mysqlDatabaseMigration | quote }}
   MYSQL_HOST: {{ .Values.connections.mysqlHost }}
   MYSQL_DATABASE: {{ .Values.connections.mysqlDatabase }}
