--- a/templates/configmaps/proxy-frontend.yaml
+++ b/templates/configmaps/proxy-frontend.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: default-conf
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
 data:
   default.conf: |-
     map $http_host $this_host {
@@ -77,7 +82,7 @@ data:
 
     location / {
 
-            proxy_pass http://proxy:8092;
+            proxy_pass http://{{ template "app.svc.proxy.name" . }}:{{ .Values.proxy.service.port.external }};
         }
     }
 {{- end }}
