--- a/templates/configmaps/update-app.yaml
+++ b/templates/configmaps/update-app.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: update-app
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "2"
