--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -33,3 +33,5 @@ data:
   APP_CORE_MACHINEKEY: {{ .Values.connections.appCoreMachinekey | quote }}
   DOCUMENT_SERVER_URL_PUBLIC: {{ .Values.connections.documentServerUrlPublic | quote }}
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.documentServerUrlInternal | quote }}
+  APP_KNOWN_PROXIES: {{ .Values.connections.appKnownProxies | quote }}
+  APP_KNOWN_NETWORKS: {{ .Values.connections.appKnownNetworks | quote }}
