--- a/templates/configmaps/proxy-init-scripts.yaml
+++ b/templates/configmaps/proxy-init-scripts.yaml
@@ -25,6 +25,7 @@ data:
     sed -i 's/$service_sso/{{ .Values.connections.ssoauthHost }}\:{{ .Values.ssoauth.containerPorts.app }}/g' /etc/nginx/conf.d/onlyoffice.conf
     sed -i 's/$service_doceditor/{{ .Values.connections.doceditorHost }}\:{{ .Values.doceditor.containerPorts.doceditor }}/g' /etc/nginx/conf.d/onlyoffice.conf
     sed -i 's/$service_login/{{ .Values.connections.loginHost }}\:{{ .Values.login.containerPorts.login }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    sed -i 's/$service_healthchecks/{{ .Values.connections.healthchecksHost }}\:{{ .Values.healthchecks.containerPorts.healthcheck }}/g' /etc/nginx/conf.d/onlyoffice.conf
     {{- if contains "https://" .Values.connections.documentServerHost }}
     sed -i 's/http\:\/\/$document_server/https\:\/\/{{ trimPrefix "https://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
     {{- else if contains "http://" .Values.connections.documentServerHost }}
