--- a/templates/pvc/people-server-data.yaml
+++ b/templates/pvc/people-server-data.yaml
@@ -15,6 +15,7 @@ spec:
   storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
   - ReadWriteMany
+  volumeMode: Filesystem
   resources:
     requests:
       storage: {{ .Values.persistence.peopleData.size }}
