--- a/templates/pvc/app-data.yaml
+++ b/templates/pvc/app-data.yaml
@@ -3,10 +3,16 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: app-data
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
   accessModes:
   - ReadWriteMany
+  volumeMode: Filesystem
   resources:
     requests:
       storage: {{ .Values.persistence.appData.size }}
