--- a/templates/secrets/broker-password.yaml
+++ b/templates/secrets/broker-password.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-broker
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "3"
