--- a/templates/secrets/jwt.yaml
+++ b/templates/secrets/jwt.yaml
@@ -2,10 +2,18 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: jwt
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
 type: Opaque
-#immutable: true
 stringData:
+  {{- if typeIs "bool" .Values.jwt.enabled }}
   JWT_ENABLED: {{ .Values.jwt.enabled | quote }}
+  {{- if .Values.jwt.enabled }}
   JWT_SECRET: {{ .Values.jwt.secret | quote }}
   JWT_HEADER: {{ .Values.jwt.header | quote }}
   JWT_IN_BODY: {{ .Values.jwt.inBody | quote }}
+  {{- end }}
+  {{- end }}
