--- a/templates/secrets/redis-password.yaml
+++ b/templates/secrets/redis-password.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-redis
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
 type: Opaque
 stringData:
   {{ .Values.connections.redisSecretKeyName }}: {{ include "app.redis.password" . | quote }}
