--- a/templates/jobs/pre-upgrade.yaml
+++ b/templates/jobs/pre-upgrade.yaml
@@ -3,6 +3,11 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: pre-upgrade
+  namespace: {{ include "app.namespace" . | quote }}
+  {{- if .Values.commonLabels }}
+  labels:
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+  {{- end }}
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "3"
@@ -11,8 +16,20 @@ spec:
   backoffLimit: 2
   template:
     spec:
+      serviceAccountName: {{ include "app.serviceAccountName" . }}
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if or .Values.upgrade.job.podAffinity .Values.upgrade.job.nodeAffinity }}
+      affinity:
+        {{- with .Values.upgrade.job.podAffinity }}
+        podAffinity:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
+        {{- with .Values.upgrade.job.nodeAffinity }}
+        nodeAffinity:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
       {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
@@ -26,10 +43,10 @@ spec:
       {{- end }}
       initContainers:
       {{- if .Values.upgrade.job.initContainers.migrationRunner.enabled }}
-      - name:  migration-runner
-        image: {{ .Values.upgrade.job.initContainers.migrationRunner.image.repository }}:{{ .Values.upgrade.job.initContainers.migrationRunner.image.tag }}
+      - name: migration-runner
+        image: {{ .Values.upgrade.job.initContainers.migrationRunner.image.repository }}:{{ default .Values.images.tag .Values.upgrade.job.initContainers.migrationRunner.image.tag }}
         imagePullPolicy: {{ .Values.upgrade.job.initContainers.migrationRunner.image.pullPolicy }}
-        resources: {{- toYaml .Values.resources | nindent 10 }}
+        resources: {{- toYaml .Values.install.job.initContainers.migrationRunner.resources | nindent 10 }}
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
@@ -48,7 +65,7 @@ spec:
       - name: app-clear-storage
         image: {{ .Values.upgrade.job.initContainers.clearStorage.image.repository }}:{{ .Values.upgrade.job.initContainers.clearStorage.image.tag }}
         imagePullPolicy: {{ .Values.upgrade.job.initContainers.clearStorage.image.pullPolicy }}
-        resources: {{- toYaml .Values.resources | nindent 10 }}
+        resources: {{- toYaml .Values.upgrade.job.initContainers.clearStorage.resources | nindent 10 }}
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
@@ -65,19 +82,19 @@ spec:
           mountPath: /var/www/products/ASC.Files/server/
         - name: people-data
           mountPath: /var/www/products/ASC.People/server/
-#        - name: change-db-scripts
-#          mountPath: /sql/changedb.sql
-#          subPath: changedb.sql
         - name: update-scripts
           mountPath: /sql/update.sh
           subPath: update.sh
+        # - name: change-db-scripts
+        #   mountPath: /sql/changedb.sql
+        #   subPath: changedb.sql
         command: ["/bin/sh", "-c"]
         args: ["/sql/update.sh"]
       containers:
       - name: app-init-storage
-        image: {{ .Values.images.initContainer.initStorage }}:{{ .Values.images.tag }}
-        imagePullPolicy: {{ .Values.images.pullPolicy }}
-        resources: {{- toYaml .Values.resources | nindent 10 }}
+        image: {{ .Values.initContainers.initStorage.image.repository }}:{{ default .Values.images.tag .Values.initContainers.initStorage.image.tag }}
+        imagePullPolicy: {{ .Values.initContainers.initStorage.image.pullPolicy }}
+        resources: {{- toYaml .Values.initContainers.initStorage.resources | nindent 10 }}
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/ASC.Files/server/
@@ -90,12 +107,12 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "app.pvc.people.name" . }}
-#      - name: change-db-scripts
-#        configMap:
-#          name: change-db-scripts
       - name: update-scripts
         configMap:
           name: update-app
           defaultMode: 0755
+      # - name: change-db-scripts
+      #   configMap:
+      #     name: change-db-scripts
       restartPolicy: Never
 {{- end }}
